static/css/style.css
/* CSS Variables */
@import url(./partials/_variables.css);
@import url(./partials/_global.css);

/* Navigation Bar */
.header-area .main-menu .navbar-brand {
    padding: 0 2rem 0 0;
    width: 30%;
}

.header-area .main-menu .navbar-default {
    padding: 1rem 20rem;
    position: fixed;
    top: -1px;
    left: 0;
    right: 0;
    z-index: 9999;
    width: 100vw;
}

.header-area .main-menu .navbar .navbar-brand > img {
    width: 90px;
    height: auto;
}

.header-area .main-menu .nav-item .nav-link {
    font: normal 500 15px/2px "Montserrat";
    text-transform: uppercase;
    padding: 1.7rem;
}

.header-area .main-menu .navbar-nav .active a {
    color: var(--primary-color);
}

.header-area .main-menu .navbar-nav a:hover {
    color: var(--primary-color);
}

/* Banner Section */

.site-main .site-banner .site-title h3 {
    font-weight: 500;
}

.site-main .site-banner .site-title h1 {
    font-size: 5rem;
}

.site-main .site-banner .site-title h4 {
    font-size: 1.5rem;
}

.site-main .site-banner .site-title {
    height: 100vh;
}

.site-main .site-banner .site-title .site-title-contents {
    width: fit-content;
    height: fit-content;
    padding-top: 35vh;
}

/* About Section */

.site-main .about-area {
    padding: 8rem 5rem;
    height: 100vh;
}

.site-main .about-area .about-title h2 > span {
    display: block;
    font: normal bold 3rem/60px "Montserrat";
    /* letter-spacing: 21px; */
}

.site-main .about-area .about-title .paragraph > p {
    padding: .4rem 0;
    font-size: 1.5rem;
    /* width: 75%; */
}

p.para {
    color: var(--text-color);
    font: normal 500 16px/25px "Montserrat";
}

/* Project Section */

.site-main .project-area {
    padding: 4rem 0;
    min-height: 100vh;
}

.site-main .project-area .button-group button {
    background: transparent;
    border: none;
    font: normal 500 16px/130px "Montserrat";
    text-transform: uppercase;
}

.site-main .project-area .button-group button + button {
    padding-left: 3rem;
}

.site-main .project-area .grid .project-item > .title h4 {
    font: normal 700 25px/30px "Montserrat";
}

.site-main .project-area .grid .project-item .title {
    padding-top: 1rem;
}

.site-main .project-area .grid .project-item .img > img {
    width: 300px;
    height: auto;
}

.site-main .project-area .grid .project-item .img {
    text-align: center;
}

.site-main .project-area .grid .project-item {
    padding-top: 2rem;
}

.site-main .project-area .grid .project-item .description {
    padding: 0.5rem 0;
    background-color: rgb(221, 221, 221, 0.15);
}

.site-main .project-area .grid .project-item .project-links {
    padding-top: 0.5rem;
    padding-bottom: 1rem;
}

.site-main .project-area .grid .project-item .project-links a > i {
    font-size: 20px;
    padding-right: 0.5rem;
    color: var(--text-color);
}

.site-main .project-area .grid .project-item .project-links a:last-of-type > i {
    padding-right: 0;
}

.site-main .project-area .grid .project-item .project-links a:hover > i {
    color: var(--primary-color);
}

/* Footer Section */

footer.footer-area {
    padding-top: 5rem;
}

footer.footer-area .social h5 {
    font: normal 500 23px/30px "Montserrat";
}

footer.footer-area .social a > i {
    font-size: 40px;
    padding: 2rem;
    color: var(--text-color);
}

footer.footer-area .social a:hover > i {
    color: var(--primary-color);
}

footer.footer-area .copyright {
    padding-top: 2rem;
    padding-bottom: 1rem;
}

